Added more tests